--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Hello</h1>
+<% @restaurant.each do |restaurant| %>
+  <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
+<% end %>
+
+<%= link_to "Add Restaurant", new_restaurant_path %>
+
