--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -7,7 +7,7 @@
 
       <div class="btn-group">
         <%= link_to "Edit", edit_restaurant_review_path(review.restaurant, review), class: "btn btn-outline-primary btn-sm" %>
-        <%= link_to "Delete", restaurant_review_path(review.restaurant, review), class: "btn btn-outline-primary btn-sm",  method: :delete, dats: {confrim: "Are you sure?"} %>
+        <%= link_to "Delete", restaurant_review_path(review.restaurant, review), method: :delete, data: {confrim: "Are you sure?"}, class: "btn btn-outline-primary btn-sm" %>
       </div>
     <% end %>
   <% end %>
