--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #A6E508;">
 
   <div class="navbar-brand">
-    <%= link_to "Restaurants", root_path %>
+    <%= link_to "Eat It", root_path %>
   </div>
 
   <div class="nav-item dropdown">
