--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #A6E508;">
 
-  <div class="navbar-brand">
+  <div class="navbar-brand" href="#">
+    <%= image_tag("logo/yellow-star.png", class: "star-logo") %>
     <%= link_to "Eat It", root_path %>
+    <h2 class="tag">Restaurant Reviews</h2>
   </div>
 
   <div class="nav-item dropdown">
